@@ -70,6 +70,8 @@ Version 0.9
    the `get_send_file_options` hook is used.
 .. Fixed an assumption in sessions implementation which could break message
    flashing on sessions implementations which use external storage.
+.. Changed the behavior of tuple return values from functions.  They are no
+   longer arguments to the response object, they now have a defined meaning.
 
 - :func:`flask.Request.on_json_loading_failed` は、標準でJSONフォーマットのレスポンスを返します。
 - :func:`flask.url_for` 関数は、生成済みのリンクに対するアンカーを生成することができます。
@@ -112,6 +114,8 @@ Version 0.9
   the `get_send_file_options` hook is used.
 - Fixed an assumption in sessions implementation which could break message
   flashing on sessions implementations which use external storage.
+- Changed the behavior of tuple return values from functions.  They are no
+  longer arguments to the response object, they now have a defined meaning.
 
 Version 0.8.1
 -------------
